--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Madureira Odonto</title>
+    <title>Madureira Eventos</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- Bootstrap -->
     <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
@@ -13,12 +13,48 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css">
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
 </head>
 <body>
    <nav class="navbar navbar-expand-lg fixed-top bg-primary-color" id="navbar">
-    
+    <div class="container py-3">
+        <a href="#" class="navbar-brand primary-color">
+            <img src="img/logo/logo-texto.png" alt="Madureira">
+            <!-- <span>Madureira</span> -->
+        </a>
+        <button class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbar-items"
+        aria-controls="navbar-items"
+        aria-expanded="false">
+        <i class="bi bi-three-dots-vertical"></i>
+    </button>
+    <div class="collapse navbar-collapse" id="navbar-items">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+                <a href="#" class="nav-link active primary-color" aria-current="page">Início</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link primary-color">Quem Somos</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link primary-color">O Espaço</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link primary-color">Serviços</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link primary-color">Orçamento</a>
+            </li>
+        </ul>
+    </div>
+    </div>
    </nav>
 </body>
 </html>
